--- a/2-front-end/secao-1-introducao-ao-frontend-e-javascript-assincrono/dia-01-ambiente-de-desenvolvimento/package.json
+++ b/2-front-end/secao-1-introducao-ao-frontend-e-javascript-assincrono/dia-01-ambiente-de-desenvolvimento/package.json
@@ -5,12 +5,14 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite --open"
+    "dev": "vite --open",
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trybe/eslint-config-frontend": "^1.11.2",
     "validator": "^13.9.0",
     "vite": "^4.3.8"
   },
